# ParsingCryptoTask1

./: .env  Dockerfile  README.md  docker-compose.yml
poetry/: pyproject.toml
src/: create_tables.py  main.py
src/endpoint/: binance_method.py  kucoin_method.py
src/pars_crypto/: binance_actions.py  kucoin_actions.py
src/repositoy/config/: config.py  engine.py
src/repositoy/db_repo/: postgres.py
src/repositoy/models/: binance.py  kucoin.py
src/repositoy/models/declarative_base/: declarative_base.py
src/repositoy/service/: binance_service.py  kucoin_service.py
src/repositoy/service/dto/: binance_dto.py  kucoin_dto.py
src/send_email/: send_email.py
src/track_crypto/: track_binance.py  track_crypto.py  track_kucoin.py
